# auto-opt-pde-solver-claude

./: .resource_finder_complete  README.md  REPORT.md  literature_review.md  planning.md  pyproject.toml  resources.md
.idea-explorer/: idea.yaml  pipeline_results.json  pipeline_state.json
code/: README.md
datasets/: .gitignore  README.md
logs/: execution_claude_transcript.jsonl  research_prompt.txt  resource_finder_claude_transcript.jsonl  resource_finder_prompt.txt  session_instructions.txt
papers/: README.md
results/: adaptive_parallelization.json  all_experiments.json  baseline_profiling.json  interpolation_comparison.json  interpolation_v2.json  kernel_fusion.json  statistical_analysis.json
src/: adaptive_parallelization.py  analyze_results.py  baseline_profiling.py  kernel_fusion.py  optimized_interpolation.py  optimized_interpolation_v2.py  run_experiments.py
