[project]
name = "research-workspace"
version = "0.1.0"
description = "Research workspace for PDE solver optimization experiments"
requires-python = ">=3.10"
dependencies = [
    "jax>=0.6.2",
    "jaxlib>=0.6.2",
    "matplotlib>=3.10.8",
    "numpy>=2.2.6",
    "scipy>=1.15.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
